--- a/BuyerProfile.Web/Views/Shared/P_RightSideBar.cshtml
+++ b/BuyerProfile.Web/Views/Shared/P_RightSideBar.cshtml
@@ -257,7 +257,7 @@
                 </div>
 
             </div>
-            <div class="tab-pane" id="settings-tab" role="tabpanel">
+            @*<div class="tab-pane" id="settings-tab" role="tabpanel">
                 <h6 class="px-4 py-3 bg-light">General Settings</h6>
 
                 <div class="p-4">
@@ -302,7 +302,7 @@
                     </div>
 
                 </div>
-            </div>
+            </div>*@
         </div>
 
     </div> <!-- end slimscroll-menu-->
