--- a/BuyerProfile.Web/Views/Shared/P_SideBar.cshtml
+++ b/BuyerProfile.Web/Views/Shared/P_SideBar.cshtml
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-        <div class="card">
+        @*<div class="card">
             <div class="card-body">
                 <h5 class="header-title mb-4">Month to Date Report</h5>
                 <div class="media">
@@ -53,8 +53,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="card">
+        </div>*@
+        @*<div class="card">
             <div class="card-header bg-transparent p-3">
                 <h5 class="header-title mb-0">NBOX Status</h5>
             </div>
@@ -105,5 +105,5 @@
                     </div>
                 </li>
             </ul>
-        </div>
+        </div>*@
     </div>
