--- a/BuyerProfile.Web/Views/UserBuyList/Index.cshtml
+++ b/BuyerProfile.Web/Views/UserBuyList/Index.cshtml
@@ -95,11 +95,7 @@
                 "ajax": {
                     "url": "/UserBuyList/List",
                     "type": "POST",
-                    "datatype": "json",
-                    "dataSrc": function (json) {
-                        console.log(json)
-                        return json.data;
-                    }
+                    "datatype": "json"
 
                 },
                 "columns": [
