--- a/BuyerProfile.Web/Views/Home/Index.cshtml
+++ b/BuyerProfile.Web/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
         </div>
     </div>
 </div>
-<div class="row">
+@*<div class="row">
     <div class="col-lg-8">
         <div class="card">
             <div class="card-body">
@@ -124,7 +124,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 
 
 
