Add realtime chat with support signalR

--- a/BuyerProfile.Web/Views/Home/Index.cshtml
+++ b/BuyerProfile.Web/Views/Home/Index.cshtml
@@ -232,6 +232,7 @@
             $("#SumPurchases").html('');
             $("#RegisteredCount").html('');
             $("#PurchasesCount").html('');
+            $("#FilterValue").text(SelectedFilter);
 
             jQuery.ajax({
                 url: "/Home/GetDashboardActivities",
