--- a/BuyerProfile.Web/Views/Shared/_Layout.cshtml
+++ b/BuyerProfile.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!doctype html>
+﻿@using System.Security.Claims;
+
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -11,7 +13,7 @@
     <link rel="stylesheet" href="~/Admin/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="~/css/horizontal-layout-light/style.css">
     <link rel="shortcut icon" href="~/images/favicon.png" />
-
+    <link href="~/signalr/css/chat.css" rel="stylesheet" />
     @RenderSection("Styles", required: false)
     <script src="~/Admin/vendors/js/vendor.bundle.base.js"></script>
 </head>
@@ -19,6 +21,52 @@
 
 <body>
     <div id="modal-placeholder"></div>
+    <div id="chatDialog" class="disconnected">
+        <div id="chatWelcomePanel">
+            <a onclick="ChangeStyle();" href='javascript:void(0);'><h4 id="chatTitle" class="bg-dark text-decoration-none text-white text-center p-3"></h4></a>
+            <form id="chatConnectForm">
+                <input type="hidden" value="@User.FindFirstValue(ClaimTypes.Name)" />
+                <div class="row">
+                    <button type="submit" class="btn btn-success font-size-16 btn-lg btn-block chat-send waves-effect waves-light" style="margin:50px">
+                        Connect to support
+                        <i class="fa-send-o"></i>
+                    </button>
+                </div>
+            </form>
+        </div>
+        <div id="chatConnectionInfo" class="text-center">
+            <strong class="text-center">Connecting...</strong>
+        </div>
+        <div id="chatMainPanel">
+            <a onclick="ChangeStyle();" href='javascript:void(0);'><h4 id="chatTitles" class="bg-dark text-decoration-none text-white text-center p-3"></h4></a>
+            <ul id="chatHistory"></ul>
+            <div id="bottomPanel">
+                <form id="chatForm">
+                    <div class="input-group mb-3">
+
+                        <input type="text" id="messageTextbox" class="form-control form-control-sm border-light mr-1" placeholder="Enter Message...">
+                        <div class="input-group-prepend">
+                            <button type="button" onclick='openfile("#file-input")' class="btn btn-success mr-1" title="Attach File">
+                                <i class="mdi mdi-attachment"></i>
+                            </button>
+                            <input id="file-input" onchange="UpFile();" type="file" name="name" style="display: none;">
+
+                        </div>
+                        <div class="input-group-append">
+                            <button type="submit" class="btn btn-primary font-size-16 chat-send waves-effect waves-light">
+                                Send
+                                <i class="fa-send-o"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                </form>
+                <input id="roomId" type="hidden" />
+                <input type="hidden" id="UserId" value="@User.FindFirstValue(ClaimTypes.NameIdentifier)" />
+                <input type="hidden" id="UserName" value="@User.FindFirstValue(ClaimTypes.Name)" />
+            </div>
+        </div>
+    </div>
     <div class="container-scroller">
         <div class="horizontal-menu">
             <partial name="P_Header" />
@@ -39,6 +87,39 @@
     <script src="~/Admin/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <script src="~/js/formpickers.js"></script>
     <script src="~/js/jquery.unobtrusive-ajax.js"></script>
+    <script src="~/signalr/js/signalr.js"></script>
+    <script src="~/signalr/js/push.min.js"></script>
+    <script src="~/signalr/js/index.js"></script>
+    <script src="~/signalr/js/moment.min.js"></script>
+    <script>
+        var visibileChatBox = false;
+        $("#chatTitle").text("Have a question? click here");
+        $("#chatTitles").text("See your chat");
+
+        function ChangeStyle() {
+            if (!visibileChatBox) {
+                $("#chatTitle").text("I have no questions at the moment");
+                $("#chatTitles").text("Minimize chat");
+                $("#chatDialog").css({
+                    "position": "fixed", "z-index": "10", "bottom": "0", "right": "0", "background-color": "white", "height": "400px", "width": "350px", "bottom": "0", "box-shadow": "3px 2px 13px 2px rgba(0, 0, 0, 0.1)", "margin-bottom": "0"
+                });
+                visibileChatBox = true;
+            }
+            else {
+                $("#chatTitle").text("Have a question? click here");
+                $("#chatTitles").text("See your chat");
+                $("#chatDialog").css({
+                    "position": "fixed", "z-index": "10", "bottom": "0", "right": "0", "background-color": "white", "height": "400px", "width": "350px", "bottom": "0", "box-shadow": "3px 2px 13px 2px rgba(0, 0, 0, 0.1)", "margin-bottom": "-355px"
+                });
+                visibileChatBox = false;
+            }
+        }
+    </script>
+
+
     @RenderSection("Scripts", required: false)
+
+
+
 </body>
 </html>
